--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,7 +18,8 @@ set -s escape-time 0
 setw -g mode-keys vi
 
 # Copy-Mode
-bind-key [ copy-mode
+bind-key v copy-mode
+bind-key b paste
 
 #Vertical Split
 bind-key "|" split-window -h -c "#{pane_current_path}"
