TMUX: using <leader>ß brings up a list of active sessions

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -18,6 +18,12 @@ set -s escape-time 0
 setw -g mode-keys vi
 
 # Copy-Mode
+unbind <C-[>
+unbind <C-]>
+
+unbind D 
+bind-key ß choose-session
+
 bind-key v copy-mode
 bind-key b paste
 
