--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,13 +17,11 @@ set -s escape-time 0
 # Vim Style Keys
 setw -g mode-keys vi
 
-# Copy-Mode
-unbind <C-[>
-unbind <C-]>
-
+# Session Selector
 unbind D 
 bind-key ß choose-session
 
+# Copy-Mode
 bind-key v copy-mode
 bind-key b paste
 
@@ -58,8 +56,6 @@ bind -r L resize-pane -R 2
 # Empty window name on change
 unbind ,
 bind-key , command-prompt -p (rename-window) "rename-window '%%'"
-
-
 
 
 ###############################################################################
