--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,9 @@
-#unbind C-b
-#set -g prefix C-b
-#bind C-b send-prefix
+unbind C-b
+set -g prefix C-b
+bind C-b send-prefix
 
-unbind C-space
-set -g prefix C-space
-bind C-space send-prefix
+#set -g prefix C-space
+#bind C-space send-prefix
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
@@ -15,7 +14,7 @@ set -g mouse off
 set -s escape-time 0
 
 # Vim Style Keys
-setw -g mode-keys vi
+set -g mode-keys vi
 
 # Session Selector
 unbind D 
@@ -33,7 +32,7 @@ bind-key "\\" split-window -fh -c "#{pane_current_path}"
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
 
-bind C-space last-window
+#bind C-space last-window
 
 bind M choose-window 'join-pane -h -s "%%"'
 bind m choose-window 'join-pane -s "%%"'
