--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,10 +40,10 @@ bind m choose-window 'join-pane -s "%%"'
 bind s break-pane
 
 # Move between panels
-bind -r C-h select-pane -L
-bind -r C-j select-pane -D
-bind -r C-k select-pane -U
-bind -r C-l select-pane -R
+bind -r h select-pane -L
+bind -r j select-pane -D
+bind -r k select-pane -U
+bind -r l select-pane -R
 
 # Resize panels
 bind -r J resize-pane -D 2
