rebound tmux shortcuts

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,10 +2,9 @@ unbind C-b
 set -g prefix C-b
 bind C-b send-prefix
 
-#set -g prefix C-space
-#bind C-space send-prefix
-
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+bind b clock-mode
 
 # Disable Mouse
 set -g mouse off
@@ -16,28 +15,28 @@ set -s escape-time 0
 # Vim Style Keys
 set -g mode-keys vi
 
-# Session Selector
+# New Window
+bind-key w new-window
+
+# Sonession switching
+unbind t
+bind t switch-client -p   # previous
+unbind g
+bind g switch-client -n   # next
 unbind D 
-bind-key ß choose-session
+bind-key ß choose-session # selector
 
 # Copy-Mode
-bind-key v copy-mode
-bind-key b paste
+bind-key c copy-mode
+bind-key v paste
 
 #Vertical Split
-bind-key "|" split-window -h -c "#{pane_current_path}"
-bind-key "\\" split-window -fh -c "#{pane_current_path}"
+bind-key "i" split-window -h -c "#{pane_current_path}"
+bind-key "I" split-window -fh -c "#{pane_current_path}"
 
 #Horizontal Split
 bind-key "-" split-window -v -c "#{pane_current_path}"
 bind-key "_" split-window -fv -c "#{pane_current_path}"
-
-#bind C-space last-window
-
-bind M choose-window 'join-pane -h -s "%%"'
-bind m choose-window 'join-pane -s "%%"'
-
-bind s break-pane
 
 # Move between panels
 bind -r h select-pane -L
@@ -51,10 +50,22 @@ bind -r K resize-pane -U 2
 bind -r H resize-pane -L 2
 bind -r L resize-pane -R 2
 
+# Join/Split panes
+bind M choose-window 'join-pane -h -s "%%"'
+bind m choose-window 'join-pane -s "%%"'
+bind s break-pane
+
+bind z previous-window
+bind u next-window
+
+# move window
+unbind ,
+bind-key , command-prompt -p (move-window) "move-window -t '%%'"
 
 # Empty window name on change
-unbind ,
-bind-key , command-prompt -p (rename-window) "rename-window '%%'"
+unbind .
+bind-key . command-prompt -p (rename-window) "rename-window '%%'"
+
 
 
 ###############################################################################
