Remapped TMUX: - V copy mode - B paste - C Clock

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,7 @@ bind C-b send-prefix
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-bind b clock-mode
+bind c clock-mode
 
 # Disable Mouse
 set -g mouse off
@@ -27,8 +27,8 @@ unbind D
 bind-key ß choose-session # selector
 
 # Copy-Mode
-bind-key c copy-mode
-bind-key v paste
+bind-key v copy-mode
+bind-key b paste
 
 #Vertical Split
 bind-key "i" split-window -h -c "#{pane_current_path}"
