--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 unbind C-b
-set -g prefix C-b
-bind C-b send-prefix
+set -g prefix C-Space
+bind C-Space send-prefix
+# set -g prefix C-b
+# bind C-b send-prefix
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
