--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,9 +30,6 @@ exec --no-startup-id dex --autostart --environment i3
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -54,12 +51,6 @@ bindsym $mod+BackSpace kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 bindsym $mod+space exec --no-startup-id rofi -show drun
-
-# A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+h focus left
@@ -100,13 +91,15 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+Tab floating toggle
 
 # change focus between tiling / floating windosm
 bindsym $mod+Tab focus mode_toggle
 
 # focus the parent containen
 bindsym $mod+a focus parent
+
+bindsym $mod+t sticky toggle
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -215,4 +208,5 @@ exec --no-startup-id compton
 # Applets
 exec --no-startup-id mate-power-manager
 exec --no-startup-id mate-volume-control-status-icon
+exec --no-startup-id nm-applet
 
