--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,12 +8,11 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FireCodeNF 11 
+font pango:FireCodeNF 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -32,11 +31,20 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
+# set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+
+# Mover entre workspaces 
+#bindsym $mod+Left workspace prev
+#bindsym $mod+Right workspace next
+bindsym $mod+Ctrl+h workspace prev
+bindsym $mod+Ctrl+l workspace next
+
+bindsym $mod+Ctrl+Shift+h move container to workspace prev; workspace prev
+bindsym $mod+Ctrl+Shift+l move container to workspace next; workspace next
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -51,6 +59,7 @@ bindsym $mod+BackSpace kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec --no-startup-id dmenu_run
 bindsym $mod+space exec --no-startup-id rofi -show drun
+bindsym $mod+period exec --no-startup-id rofi-emoji-picker
 
 # change focus
 bindsym $mod+h focus left
@@ -96,10 +105,11 @@ bindsym $mod+Shift+Tab floating toggle
 # change focus between tiling / floating windosm
 bindsym $mod+Tab focus mode_toggle
 
+# make floating window sticky
+bindsym $mod+t sticky toggle
+
 # focus the parent containen
 bindsym $mod+a focus parent
-
-bindsym $mod+t sticky toggle
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -189,17 +199,18 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        i3bar_command i3bar
+#bar {
+        # i3bar_command i3bar
         # status_command i3status
-        position top
-}
+        # position bottom
+#}
 
 #===============================================================================
 # AutoStart
 #===============================================================================
 
-# Set Background Image
+# launch UI 
+exec --no-startup-id ~/.config/polybar/i3wmthemer_bar_launch.sh                 
 exec --no-startup-id feh --bg-fill ~/Bilder/wallpapers/bsp_3x2_conv_16x9.png
 
 # Transparency for Windows
@@ -210,3 +221,13 @@ exec --no-startup-id mate-power-manager
 exec --no-startup-id mate-volume-control-status-icon
 exec --no-startup-id nm-applet
 
+
+#===============================================================================
+# Theme
+#===============================================================================
+
+client.background           #222222
+client.focused              #ffb52a #ffb52a #000000 #000000
+client.urgent               #e60053 #e60053 #a5a5a5 #1A1A1A
+client.focused_inactive     #222222 #222222 #dfdfdf #dfdfdf
+client.unfocused            #222222 #222222 #dfdfdf #dfdfdf
