TMUX: Replaced choose-session with choose-tree

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,7 +26,8 @@ bind t switch-client -p   # previous
 unbind g
 bind g switch-client -n   # next
 unbind D 
-bind-key ß choose-session # selector
+#bind-key ß choose-session # selectorA
+bind-key ß choose-tree # selector
 
 # Copy-Mode
 bind-key v copy-mode
