More Windows stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+set -g default-terminal screen-256color
+
 # unbind C-b
 # set -g prefix C-Space
 # bind C-Space send-prefix
@@ -7,7 +9,6 @@ bind C-b send-prefix
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 bind c clock-mode
-
 # Disable Mouse
 set -g mouse off
 
