--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,10 @@
 set -g default-terminal screen-256color
 
-# unbind C-b
-# set -g prefix C-Space
-# bind C-Space send-prefix
-set -g prefix C-b
-bind C-b send-prefix
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+#set -g prefix C-b
+#bind C-b send-prefix
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
