TMUX: Removed z/u bindings, since n/p works fine too

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,8 +59,8 @@ bind M choose-window 'join-pane -h -s "%%"'
 bind m choose-window 'join-pane -s "%%"'
 bind s break-pane
 
-bind z previous-window
-bind u next-window
+# bind z previous-window
+# bind u next-window
 
 # move window
 unbind ,
