--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,11 +8,15 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-set $mod Mod4
+
+set $modMain Mod4
+set $modSub  Mod1 
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:FireCodeNF 11
+# font pango:monospace 14
+#font pango:DejaVu Sans Mono 14
+font pango:BigBlueTermPlus Nerd Font Bold 14
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -21,100 +25,95 @@ font pango:FireCodeNF 11
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
-
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
+exec --no-startup-id compton
+exec --no-startup-id mate-power-manager
+exec --no-startup-id nm-applet
+exec --no-startup-id fixmascreen
+exec --no-startup-id fixmamap
 
 # Use pactl to adjust volume in PulseAudio.
-# set $refresh_i3status killall -SIGUSR1 i3status
+set $refresh_i3status killall -SIGUSR1 i3status
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
-# Mover entre workspaces 
-#bindsym $mod+Left workspace prev
-#bindsym $mod+Right workspace next
-bindsym $mod+p workspace prev
-bindsym $mod+n workspace next
+# Use Mouse+$modMain to drag floating windows to their wanted position
+floating_modifier $modMain
 
-bindsym $mod+Ctrl+Shift+h move container to workspace prev; workspace prev
-bindsym $mod+Ctrl+Shift+l move container to workspace next; workspace next
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+# move tiling windows via drag & drop by left-clicking into the title bar,
+# or left-clicking anywhere into the window while holding the floating modifier.
+tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $modMain+Return exec i3-sensible-terminal
 
 # kill focused window
-bindsym $mod+Shift+q kill
-bindsym $mod+BackSpace kill
+bindsym $modMain+Shift+q kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+space exec --no-startup-id rofi -show drun
-bindsym Mod1+Tab exec --no-startup-id rofi -show window
-bindsym Mod1+space exec --no-startup-id rofi -show run
-bindsym $mod+period exec --no-startup-id rofi-emoji-picker
+# bindsym $modMain+d exec --no-startup-id dmenu_run
+# A more modern dmenu replacement is rofi:
+# bindcode $modMain+40 exec "rofi -modi drun,run -show drun"
+# There also is i3-dmenu-desktop which only displays applications shipping a
+# .desktop file. It is a wrapper around dmenu, so you need that installed.
+# bindcode $modMain+40 exec --no-startup-id i3-dmenu-desktop
+
+bindsym $modSub+space exec --no-startup-id rofi -show drun
+bindsym $modMain+Tab exec --no-startup-id rofi -show window
+bindsym $modMain+space exec --no-startup-id rofi -show run
+bindsym $modMain+period exec --no-startup-id rofi-emoji-picker
 
 # change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $modMain+h focus left
+bindsym $modMain+j focus down
+bindsym $modMain+k focus up
+bindsym $modMain+l focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $modMain+Left focus left
+bindsym $modMain+Down focus down
+bindsym $modMain+Up focus up
+bindsym $modMain+Right focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $modMain+Shift+h move left
+bindsym $modMain+Shift+j move down
+bindsym $modMain+Shift+k move up
+bindsym $modMain+Shift+l move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $modMain+Shift+Left move left
+bindsym $modMain+Shift+Down move down
+bindsym $modMain+Shift+Up move up
+bindsym $modMain+Shift+Right move right
 
-# split in horizontal orientatioh
-bindsym $mod+i split h
+# split in horizontal orientation  ( i  aka I aka |-lookalike)
+bindsym $modMain+i split h
 
-# split in vertical orientation
-bindsym $mod+u split v
+# split in vertical orientation ( - )
+bindsym $modMain+minus split v
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
+bindsym $modMain+f fullscreen toggle
+bindsym $modMain+p sticky toggle
 
 # change container layout (stacked, tabbed, toggle split)
-# bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $modMain+s layout stacking
+bindsym $modMain+w layout tabbed
+bindsym $modMain+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+Tab floating toggle
+bindsym $modMain+Shift+f floating toggle
 
-# change focus between tiling / floating windosm
-bindsym $mod+Tab focus mode_toggle
+# change focus between tiling / floating windows
+# bindsym $modMain+Space focus mode_toggle
 
-# make floating window sticky
-bindsym $mod+t sticky toggle
-
-# focus the parent containen
-bindsym $mod+a focus parent
-
+# focus the parent container
+bindsym $modMain+a focus parent
 # focus the child container
-#bindsym $mod+d focus child
+#bindsym $modMain+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -130,47 +129,55 @@ set $ws9 "9"
 set $ws10 "10"
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+# switch to workspace
+bindsym $modMain+1 workspace number $ws1
+bindsym $modMain+2 workspace number $ws2
+bindsym $modMain+3 workspace number $ws3
+bindsym $modMain+4 workspace number $ws4
+bindsym $modMain+5 workspace number $ws5
+bindsym $modMain+6 workspace number $ws6
+bindsym $modMain+7 workspace number $ws7
+bindsym $modMain+8 workspace number $ws8
+bindsym $modMain+9 workspace number $ws9
+bindsym $modMain+0 workspace number $ws10
 
 # move focused container to workspace ; focus new workspac
-bindsym $mod+Shift+1 move container to workspace number $ws1 ; workspace $ws1 
-bindsym $mod+Shift+2 move container to workspace number $ws2 ; workspace $ws2 
-bindsym $mod+Shift+3 move container to workspace number $ws3 ; workspace $ws3 
-bindsym $mod+Shift+4 move container to workspace number $ws4 ; workspace $ws4 
-bindsym $mod+Shift+5 move container to workspace number $ws5 ; workspace $ws5 
-bindsym $mod+Shift+6 move container to workspace number $ws6 ; workspace $ws6 
-bindsym $mod+Shift+7 move container to workspace number $ws7 ; workspace $ws7 
-bindsym $mod+Shift+8 move container to workspace number $ws8 ; workspace $ws8 
-bindsym $mod+Shift+9 move container to workspace number $ws9 ; workspace $ws9 
-bindsym $mod+Shift+0 move container to workspace number $ws10; workspace $ws10 
+bindsym $modMain+Shift+1 move container to workspace number $ws1 ; workspace $ws1 
+bindsym $modMain+Shift+2 move container to workspace number $ws2 ; workspace $ws2 
+bindsym $modMain+Shift+3 move container to workspace number $ws3 ; workspace $ws3 
+bindsym $modMain+Shift+4 move container to workspace number $ws4 ; workspace $ws4 
+bindsym $modMain+Shift+5 move container to workspace number $ws5 ; workspace $ws5 
+bindsym $modMain+Shift+6 move container to workspace number $ws6 ; workspace $ws6 
+bindsym $modMain+Shift+7 move container to workspace number $ws7 ; workspace $ws7 
+bindsym $modMain+Shift+8 move container to workspace number $ws8 ; workspace $ws8 
+bindsym $modMain+Shift+9 move container to workspace number $ws9 ; workspace $ws9 
+bindsym $modMain+Shift+0 move container to workspace number $ws10; workspace $ws10 
 
 # move focused container to workspace
-bindsym $mod+Ctrl+1 move container to workspace number $ws1 
-bindsym $mod+Ctrl+2 move container to workspace number $ws2 
-bindsym $mod+Ctrl+3 move container to workspace number $ws3 
-bindsym $mod+Ctrl+4 move container to workspace number $ws4 
-bindsym $mod+Ctrl+5 move container to workspace number $ws5 
-bindsym $mod+Ctrl+6 move container to workspace number $ws6 
-bindsym $mod+Ctrl+7 move container to workspace number $ws7 
-bindsym $mod+Ctrl+8 move container to workspace number $ws8 
-bindsym $mod+Ctrl+9 move container to workspace number $ws9 
-bindsym $mod+Ctrl+0 move container to workspace number $ws10
+bindsym $modMain+Ctrl+1 move container to workspace number $ws1 
+bindsym $modMain+Ctrl+2 move container to workspace number $ws2 
+bindsym $modMain+Ctrl+3 move container to workspace number $ws3 
+bindsym $modMain+Ctrl+4 move container to workspace number $ws4 
+bindsym $modMain+Ctrl+5 move container to workspace number $ws5 
+bindsym $modMain+Ctrl+6 move container to workspace number $ws6 
+bindsym $modMain+Ctrl+7 move container to workspace number $ws7 
+bindsym $modMain+Ctrl+8 move container to workspace number $ws8 
+bindsym $modMain+Ctrl+9 move container to workspace number $ws9 
+bindsym $modMain+Ctrl+0 move container to workspace number $ws10
+
+# Alt + Tab = Switch to prev workspace and back
+bindsym $modSub+Tab workspace back_and_forth 
+
+# Alt + comma and Alt + period switch to next and prev workspace
+bindsym $modSub+comma workspace prev
+bindsym $modSub+period workspace next
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $modMain+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
+bindsym $modMain+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+bindsym $modMain+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -191,27 +198,26 @@ mode "resize" {
         bindsym Up resize shrink height 10 px or 10 ppt
         bindsym Right resize grow width 10 px or 10 ppt
 
-        # back to normal: Enter or Escape or $mod+r
+        # back to normal: Enter or Escape or $modMain+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+        bindsym $modMain+r mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $modMain+r mode "resize"
 
-
-set $cfg #3b4261
+set $cfg #00E0FF
+#set $cfg #3b4261
 set $cbg #16161e
 
-set $barfg #7aa2f7
+set $barfg #00E0FF 
 set $barbg #16161e
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        i3bar_command i3bar
         status_command i3status
-        position bottom
+	position top
         colors {
             separator #444444
             background $barbg
@@ -224,28 +230,21 @@ bar {
 }
 
 #===============================================================================
-# AutoStart
-#===============================================================================
-
-# launch UI 
-#exec --no-startup-id feh --bg-fill ~/Bilder/wallpapers/bsp_3x2_conv_16x9.png
-exec --no-startup-id sh ~/.screenlayout/background.sh
-
-# Transparency for Windows
-exec --no-startup-id compton
-
-# Applets
-exec --no-startup-id mate-power-manager
-exec --no-startup-id mate-volume-control-status-icon
-exec --no-startup-id nm-applet
-
-
-#===============================================================================
 # Theme
 #===============================================================================
-
 client.background           $cbg
 client.focused              $cfg $cfg #dfdfdf #dfdfdf
 client.urgent               #e60053 #e60053 #a5a5a5 #1A1A1A
 client.focused_inactive     $cbg $cbg #dfdfdf #dfdfdf
 client.unfocused            $cbg $cbg #dfdfdf #dfdfdf
+
+
+# remove title bars and make border nicer
+default_border pixel
+for_window [class=".*"] border pixel 1
+
+# Some nice looking Gaps requires i3 4.22 or later
+smart_gaps on
+gaps inner 16
+gaps outer -8
+
